# imagesToAnimation

./: .gitignore  LICENSE  README.md  animation.conf  input.pptx  make_animation.py  output.avi  pyproject.toml  settings.conf
imagesToAnimation/: __init__.py  requirements.txt  script.py  setup.py
