[tool.poetry]
name = "animation"
version = "0.1.0"
description = ""
authors = ["jpsmithnl <jp.smith@mun.ca>"]

[tool.poetry.dependencies]
python = "^3.6"
opencv-python = "^4.1"
configargparse = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
